@@ -6,7 +6,8 @@ CHANGES
 
 - `zeit.connector.connector.Connector` doesn't use the component architecture
   now. This makes it easier to use in console scripts.
-- <feed> is now <channel>
+- <feed> is now <channel> (mock connector).
+- connector's move method uses copy+delete now
 
 0.13 (2008-04-07)
 -----------------
